# pytest-asserto

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
pytest-asserto/: plugin.py
tests/: test_plugin.py
